--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,21 @@
-﻿<header>
-    <h1>Welcome to the HN .Net MVC pratical work</h1>
-</header>
+﻿<head>
+	<title>HN - TP LOCAL</title>
+	<link rel="stylesheet" href="~/resources/Index.css" />
+</head>
+<body>
+	<header>
+		<img src="~/resources/GroupeHN.png" class="image" alt="GroupeHN" />
+		<h1>Bienvenue chez TP HN</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="/Home/Index/Form">Remplir le formulaire</a></li>
+			<li><a href="#">Liste d'avis'</a></li>
+		</ul>
+	</nav>
+	<section>
+		<p>
+			<a href="/Home/Index/Form">Remplir le formulaire</a>
+		</p>
+	</section>
+</body>
